# clara

./: .gitignore  CMakeLists.txt  README.md  clara-config-version.cmake  clara-config.cmake  doxygen.config
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/src/: Makefile  cmake_install.cmake
build-debug/tests/: Makefile  clara_test  cmake_install.cmake
cmake/Modules/: FindLAPACK.cmake
documentation/html/: annotated.html  clara_8h_source.html  classclara_1_1clara.html  classclara_1_1cone__state-members.html  classclara_1_1cone__state.html  classclara_1_1data__association-members.html  classclara_1_1data__association.html  classes.html  classio_1_1ByteSourceBase-members.html  classio_1_1ByteSourceBase.html  classio_1_1CSVReader-members.html  classio_1_1CSVReader.html  classio_1_1LineReader-members.html  classio_1_1LineReader.html  classio_1_1detail_1_1AsynchronousReader-members.html  classio_1_1detail_1_1AsynchronousReader.html  classio_1_1detail_1_1NonOwningIStreamByteSource-members.html  classio_1_1detail_1_1NonOwningIStreamByteSource.html  classio_1_1detail_1_1NonOwningStringByteSource-members.html  classio_1_1detail_1_1NonOwningStringByteSource.html  classio_1_1detail_1_1OwningStdIOByteSourceBase-members.html  classio_1_1detail_1_1OwningStdIOByteSourceBase.html  classio_1_1detail_1_1SynchronousReader-members.html  classio_1_1detail_1_1SynchronousReader.html  cone__state_8h_source.html  csv_8h_source.html  data__association_8h_source.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  group__clara.html  hierarchy.html  index.html  menudata.js  modules.html  namespaceclara.html  namespaceclara_1_1util.html  (+66 more)
documentation/latex/: annotated.tex  classclara_1_1clara.tex  classclara_1_1cone__state.tex  classclara_1_1data__association.tex  classio_1_1ByteSourceBase.eps  classio_1_1ByteSourceBase.tex  classio_1_1CSVReader.tex  classio_1_1LineReader.tex  classio_1_1detail_1_1AsynchronousReader.tex  classio_1_1detail_1_1NonOwningIStreamByteSource.eps  group__clara.tex  modules.tex  (+63 more)
images/: KaFi-ownership.xml
notebooks/: GMM-testbed.ipynb  README.md  plot_data_assoc.py  requirements.txt
playground/: README.md
src/: CMakeLists.txt  carmaker-connection.cc  main.cc  main.cpp  tcp-carmaker.cc
tests/: CMakeLists.txt  clara_carmaker_simulation.cc  clara_tests-15.cc  clara_tests.cc  cone_state_tests.cc  data_association_tests.cc  looping_tests.cc  main.cc  memory_tests.cc  util_tests.cc
tests/example-data/: 2018-04-23-obs-x-y_cluster-mx-my-covxx-covxy-covyy-id-col_loc-x-y_wemding_ground_truth.txt  2018-05-25-v1-CM-log-10.csv  2018-06-04-jesenwang-straight-00-fused-logging.csv  2018-06-04-jesenwang-straight-01-fused-logging.csv  2018-06-04-jesenwang-straight-02-fused-logging.csv  2018-06-04-jesenwang-straight-03-fused-logging.csv  large-map-randomized-cones-xy.csv  log-dist-angle-x_car-y_car-yaw_angle-vx-vy-type-time-timestamp--realtime.csv  log-dist-angle-x_car-y_car-yaw_angle-vx-vy-type-time-timestamp.csv  log-dist-angle-x_car-y_car-yaw_angle-vx-vy-type-time.csv  round-map-10-rounds-d-a-x-y-yaw-c-t.csv  round-map-many-rounds-d-a-x-y-c-t.csv  small-map-cm-cones-d-a-x-y-c-t.csv  wemding-log.csv  wemding-map-no-noise-cones-d-a-x-y-c-t.csv
tests/example-data/car/oval/: 2018-06-04_jo4-first_test  2018-06-04_jo6-first_test
tests/example-data/jesenwang-2018-06-04/: 2018-06-04-jesenwang-oval-06-fused-logging.csv
tests/example-data/jesenwang-2018-06-04/car/straight/: 2018-06-04_js0-first_test  2018-06-04_js1-first_test  2018-06-04_js2-first_test  2018-06-04_js3-first_test
tests/example-data/wemding-2018-07-20/trackdrive-v01/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v02/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v03/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v04/: wemding-2018-07-20-trackdrive-v04-blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v05/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v06/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v07/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v15/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v16/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v19/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v20/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-20/trackdrive-v23/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v01/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v04/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v05/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v06/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v11/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-23/trackdrive-v12/: blue_cones.csv  yellow_cones.csv
tests/example-data/wemding-2018-07-24/trackdrive-v03/: blue_cones.csv  yellow_cones.csv
tests/test-data/: small-map-cm-cones-d-a-x-y-c-t.csv  small-map-randomized-cones-d-a-x-y-c-t.csv  wemding-map-ground-truth-cones-d-a-x-y-c-t.csv
tests/test-data/carmaker-cone-data/: 2018-03-24-cone-data-carmaker.csv
tests/visualization/: GMM-testbed.ipynb  cone_velocity-single-shot-sensor-prediction.csv  fuse_darknet_etas_logging.ipynb  ground_truth-correvit-comparisson.csv  laplace.py  live-scatterplot.py  log.py  plot-clara-format.py  plot-yaw-stuff.ipynb  plot_all_yaws.py  plot_anything.py  plot_clara_anything.py  plot_complexity.py  plot_data_assoc.py  plot_full_path_info-2.py  plot_full_path_info.py  plot_loc.py  plot_path.py  plot_pos.py  plot_skipa.py  plot_velocity.py  skidpad.csv
(+66 files in other folders)
